--- a/src/conf/nginx-ratelimit.conf
+++ b/src/conf/nginx-ratelimit.conf
@@ -42,6 +42,27 @@ http {
   	#调试模式，关闭lua脚本缓存
   	lua_code_cache on;
 
+  	#通过limit_req_zone定义限流规则
+  	#定义每个IP的访问为6次/分钟
+  	limit_req_zone  $binary_remote_addr zone=perip:10m  rate=6r/m;
+  	#定义每台server的访问限速为 10次/秒
+  	limit_req_zone  $server_name    zone=perserver:1m   rate=10r/m;
+
+  	server {
+  	    listen  8080;
+  	    server_name localhost;
+  	    default_type    'text/html';
+  	    charset utt-8;
+
+  	    limit_req   zone=perip;
+  	    limit_req   zone=perserver;
+
+  	    location /nginx/ratelimit/demo {
+  	        echo    "-uri= $uri  -remode_addr= $remote_addr"
+  	                "-server_name= $server_name";
+  	    }
+  	}
+
   	server {
   		listen		 	80 default;
   		server_name	 	localhost;
